--- a/Samitex/app/src/main/res/layout/activity_konfirmasi.xml
+++ b/Samitex/app/src/main/res/layout/activity_konfirmasi.xml
@@ -165,7 +165,7 @@
                     android:layout_marginStart="100dp"
                     android:layout_marginLeft="100dp"
                     android:layout_marginTop="20dp"
-                    android:src="@mipmap/ic_launcher"
+                    android:src="@drawable/ic_image"
                     app:layout_constraintStart_toEndOf="@id/tv_photo"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_konfirmasi_catatan" />
