--- a/Samitex/app/src/main/res/layout/activity_scan_data.xml
+++ b/Samitex/app/src/main/res/layout/activity_scan_data.xml
@@ -118,7 +118,8 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:singleLine="true" />
+                        android:singleLine="true"
+                        android:textColor="@color/colorGrey"/>
 
                     <EditText
                         android:id="@+id/et_group"
@@ -126,7 +127,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:singleLine="true"
-                        android:verticalScrollbarPosition="right" />
+                        android:textColor="@color/colorGrey"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -167,14 +168,16 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1.3"
-                        android:singleLine="true" />
+                        android:singleLine="true"
+                        android:textColor="@color/colorGrey"/>
 
                     <EditText
                         android:id="@+id/et_mesin"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:singleLine="true" />
+                        android:singleLine="true"
+                        android:textColor="@color/colorGrey"/>
 
                     <ImageView
                         android:id="@+id/img_scanner"
@@ -254,7 +257,7 @@
                     android:layout_height="120dp"
                     android:layout_marginLeft="190dp"
                     android:layout_marginTop="10dp"
-                    android:src="@mipmap/ic_launcher"
+                    android:src="@drawable/ic_image"
                     app:layout_constraintStart_toEndOf="@id/img_btn_take_photo"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/et_catatan" />
